added Try Outs to README.md